[tool.poetry]
name = "data-science-chiller"
version = "0.1.0"
description = ""
authors = ["Voramet Chunvattananon <67162377+mcvoramet@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.9.3"
dash-bootstrap-components = "^1.4.1"
dash-daq = "^0.5.0"
pandas = "^2.0.1"
pendulum = "^2.1.2"
plotly = "^5.14.1"
requests = "^2.30.0"
pyyaml = "^6.0"
pillow = "^9.5.0"
crate = "^0.31.1"
xlsxwriter = "^3.1.0"
pythermalcomfort = "^2.7.2"
flask-caching = "^2.0.2"
matplotlib = "^3.7.1"
azure-cosmos = "^4.3.1"
azure-storage-blob = "^12.16.0"
boto3 = "^1.26.139"
dash-core-components = "^2.0.0"
psycopg2-binary = "^2.9.6"
openpyxl = "^3.1.2"
onnxruntime = "^1.15.0"
dash-mantine-components = "^0.12.1"
scikit-opt = "^0.6.6"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
